--- a/package.json
+++ b/package.json
@@ -1,9 +1,8 @@
 {
-  "name": "gatsby-starter-default",
-  "private": true,
-  "description": "A simple starter to get up and developing quickly with Gatsby",
-  "version": "0.1.0",
-  "author": "Kyle Mathews <mathews.kyle@gmail.com>",
+  "name": "ajit-site",
+  "description": "Ajit's personal site.",
+  "version": "1.0.0",
+  "author": "Ajit Singh <ajit.singh2905@gmail.com>",
   "dependencies": {
     "gatsby": "^2.0.76",
     "gatsby-image": "^2.0.20",
@@ -23,7 +22,10 @@
     "react-helmet": "^5.2.0"
   },
   "keywords": [
-    "gatsby"
+    "gatsby",
+    "personal-site",
+    "portfolio",
+    "blog"
   ],
   "license": "MIT",
   "scripts": {
@@ -50,9 +52,9 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/gatsbyjs/gatsby-starter-default"
+    "url": "https://github.com/ajitid/ajit-site"
   },
   "bugs": {
-    "url": "https://github.com/gatsbyjs/gatsby/issues"
+    "url": "https://github.com/ajitid/ajit-site/issues"
   }
 }
